--- a/CrosswordBuilder/CrosswordBuilder.csproj
+++ b/CrosswordBuilder/CrosswordBuilder.csproj
@@ -65,6 +65,12 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="PickWordDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PickWordDialog.Designer.cs">
+      <DependentUpon>PickWordDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Word.cs" />
@@ -74,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PickWordDialog.resx">
+      <DependentUpon>PickWordDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
