--- a/CrosswordBuilder/CrosswordBuilder.csproj
+++ b/CrosswordBuilder/CrosswordBuilder.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Word.cs" />
     <Compile Include="WordList.cs" />
+    <Compile Include="WordSortOrder.cs" />
     <EmbeddedResource Include="AddWordDialog.resx">
       <DependentUpon>AddWordDialog.cs</DependentUpon>
     </EmbeddedResource>
